# StellarisNaturalVoice

./: .gitignore  LICENSE  README.md  build.ps1  uninstall.ps1
azure-sapi/: Cargo.toml  LICENSE  README.md  build.rs
azure-sapi/src/: azure.rs  config.rs  engine.rs  lib.rs  logger.rs
