[package]
name = "azure-sapi"
version = "0.1.0"
edition = "2021"
description = "Azure neural TTS as a Windows SAPI5 voice (for Stellaris and any SAPI app)"
license = "MIT"

[lib]
name = "azure_sapi"
crate-type = ["cdylib", "rlib"]

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Speech",
    "Win32_Media_Audio",
    "Win32_Networking_WinHttp",
] }
windows-core = "0.61"
anyhow = "1"

# setup binary only
winreg = "0.52"

[build-dependencies]
embed-manifest = "1"

[profile.release]
opt-level = 3
lto = true
